01. ClusterSetup/05. Ingress-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-ingress-svc
  namespace: ingress-test
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
