01. ClusterSetup/07. Ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress-test
  namespace: ingress-test
spec:
  tls:
  - hosts:
      - ingress.test
    secretName: ingress-secret-tls
  rules:
  - host: ingress.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-ingress-svc
            port:
              number: 80
